# SignalGeneratorESP32

./: .gitignore  README.md  extract_text_code.py  format.txt  platformio.ini
include/: Buffers.h  Compiler.h  Core.h  Flags.h  Inject.h  Manager.h  MinMax.h  Oscilloscope.h  Screen.h  SdManager.h  Timer.h
lib/: lv_conf.h
lib/TFT_eSPI/: User_Setup.h
lib/TFT_eSPI/User_Setups/: Setup21_ILI9488.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Config.c  ui_ErrorSD.c  ui_Explorador.c  ui_Loading.c  ui_Logo.c  ui_Logo0.c  ui_LogoOriginal.c  ui_Main.c  ui_Plot.c  ui_SDError.c  ui_Test.c  ui_comp_hook.c  ui_comp_hook.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1081796697.c  ui_img_1162731896.c  ui_img_1407471917.c  ui_img_1486996648.c  ui_img_1718651389.c  ui_img_1760988675.c  ui_img_423428936.c  ui_img_config_png.c  ui_img_restart_png.c  ui_img_return_png.c  ui_img_sound_png.c
src/: main.cpp
src/core/: Compiler.cpp  Inject.cpp  Manager.cpp  MinMax.cpp  Oscilloscope.cpp  SdManager.cpp  Timer.cpp
src/lib/ui/src/: CMakeLists.txt  ui.h  ui_Explorador.c  ui_Main.c  ui_comp.c  ui_comp.h  ui_comp_buttonlist.c  ui_comp_buttonlist.h  ui_events.c  ui_helpers.c  ui_helpers.h  ui_img_1162731896.c
src/screen/: Screen.cpp  ScreenBase.cpp  ScreenExplorer.cpp  ScreenLogo.cpp  ScreenMain.cpp  ScreenPlot.cpp  ScreenRoller.cpp
