SET(SOURCES ui_Logo.c
    ui_ErrorSD.c
    ui_Explorador.c
    ui_Main.c
    ui_Loading.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_1162731896.c
    ui_img_1081796697.c
    ui_img_1760988675.c
    ui_img_1486996648.c
    ui_img_1407471917.c
    ui_img_1718651389.c
    ui_img_restart_png.c
    ui_img_return_png.c)

add_library(ui ${SOURCES})
